kubernetes/logging/elasticsearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: logging

spec:
  ingressClassName: nginx

  rules:
    - host: elasticsearch.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: elasticsearch
                port:
                  name: http
